# puppetmaster

./: .env.example  .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  PROGRESS.md  README.md  SECURITY.md  SPEC.md  puppet  pyproject.toml  spec.md
.github/workflows/: ci.yml
docs/: spec-conformance.md
scripts/: release-validate.sh
skills/: abba-iot-bugbounty-orchestrator.md  google-vrp-orchestrator.md  project-orchestrator.md  subagent-abba-binary-analyst.md  subagent-abba-escalation.md  subagent-abba-exploit-dedup.md  subagent-abba-exploit-merger.md  subagent-abba-exploit-ranker.md  subagent-abba-exploitation.md  subagent-abba-recon-scoper.md  subagent-abba-reporter.md  subagent-abba-researcher.md  subagent-abba-scope-dedup.md  subagent-abba-scope-ranker.md  subagent-abba-scoper.md  subagent-abba-triage.md  subagent-bugbounty-triage.md  subagent-code-optimizer.md  subagent-code-reviewer.md  subagent-final-auditor.md  subagent-final-validator.md  subagent-fixer.md  subagent-google-vrp-api-analyst.md  subagent-google-vrp-authorization-analyst.md  subagent-google-vrp-client-content-analyst.md  subagent-google-vrp-identity-analyst.md  subagent-google-vrp-methodology-planner.md  subagent-google-vrp-qualification-filter.md  subagent-google-vrp-report-evidence.md  subagent-google-vrp-scope-analyst.md  subagent-google-vrp-server-side-boundary.md  subagent-google-vrp-workspace-admin-analyst.md  subagent-integrator.md  subagent-milestone-executor.md  subagent-milestone-plan-candidate.md  subagent-milestone-planner.md  subagent-milestone-researcher.md  subagent-milestone-validator.md  subagent-plan-synthesizer.md  subagent-project-conventions.md  (+13 more)
src/puppetmaster/: __init__.py  (+14 more)
tests/: test_core.py  test_discord_bot.py  test_native_screenshot.py  test_terminal_image.py
(+50 files in other folders)
